sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:93: error: not found: type int
def mod(x:int, n:Int):Int =
          ^